# vault

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/models/: channel_model.py  memory_model.py  todo_model.py
app/routers/: channels_router.py  memory_router.py  todo_router.py
app/services/: embeddings_service.py  firestore_service.py
app/services/firestore/: base.py  channel_service.py  memory_service.py  todo_service.py
app/utils/: build_utils.py
tests/: test_memory.py
